add arm deployment files

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -8,4 +8,5 @@ COPY src .
 
 RUN pip install -r requirements.txt
 
+# -u     : force the stdout and stderr streams to be unbuffered;
 CMD [ "python", "process_servicebus_messages.py" ]
